--- a/css/style.css
+++ b/css/style.css
@@ -93,16 +93,37 @@ article {
     font-weight: 700;
 }
 
+.valid-email-label {
+    display: none;
+    float: right;
+    color: red;
+    text-align: right;
+}
+
 .left-section input {
     width: 100%;
     height: 40px;
     border-radius: 5px;
-    border: 1px solid var(--Grey);
     padding: 10px;
     margin: 5px 0 20px
 }
 
-.left-section button {
+.emailBorder {
+    border: 1px solid var(--Grey);
+}
+
+
+.errorEmail {
+    border: 1px solid red;
+    background-color: rgb(255, 238, 238);
+    color: red;
+}
+
+.errorEmail:focus {
+    outline: red;
+}
+
+.btn-main {
     position: relative;
     width: 100%;
     height: 40px;
@@ -115,11 +136,11 @@ article {
     z-index: 1;
 }
 
-.left-section button:hover {
+.btn-main:hover {
     background: linear-gradient(90deg, rgba(255,83,119,1) 0%, rgba(255,98,87,1) 100%);
 }
 
-.left-section button:hover:before {
+.btn-main:hover:before {
     content: "";
   position: absolute;
   margin-top: 20px;
@@ -136,4 +157,27 @@ article {
     padding: 15px
     
     
+}
+
+.thanks-article {
+    display: none;
+    max-width: 300px;
+    padding: 20px 50px 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.thanks-article img {
+    width: 35px;
+    padding-bottom: 20px;
+}
+
+.thanks-article h1{
+    font-size: 34px;
+    padding-bottom: 20px;
+}
+
+.thanks-article p {
+    font-size: 12px;
+    padding-bottom: 20px;
 }
